--- a/Magnus Romulus ( July 2018 )/Initial-Meta-Model Web UI/index.html
+++ b/Magnus Romulus ( July 2018 )/Initial-Meta-Model Web UI/index.html
@@ -1,6 +1,6 @@
 
 
-<!------> The Below code is a Web UI used to collect the data from the actors and sends it to the engine for processing-->
+<!--The Below code is a Web UI used to collect the data from the actors and sends it to the engine for processing-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
